--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </div>
 
     <footer>www 🎲 App Brewery 🎲 com</footer>
-    <script src="dicee.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
