--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <footer>&copy; 2025 Prathish. All rights reserved.</footer>
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
